# sonus-bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: handler.rs  main.rs
src/commands/: meta.rs  mod.rs  ping.rs  player.rs  youtube.rs
src/hooks/: counter.rs
